修改了几处连接

--- a/admin/main.html
+++ b/admin/main.html
@@ -239,7 +239,7 @@
                 window.open("https://gitee.com/kevinlu98/lw-admin", "_blank");
             },
             github: function () {
-                window.open("https://github.com/kevinlu98/lw-admin", "_blank");
+                window.open("https://kevinlu98.github.io/lw-admin/", "_blank");
             }
         },
         created: function () {
